# claude-audio-proctor

./: .gitignore  generate_test_audio.py  pyproject.toml  record_samples.py  run_live.py  run_pipeline.py  run_stage1.py  run_stage2.py  run_stage3.py  test_ml_proctoring.py
core/: __init__.py  confidence_aggregator.py  embedding_extractor.py  noise_classifier.py  output_builder.py  output_builder2.py  scenario_a.py  scenario_b.py  speaker_splitter.py  vad_engine.py  verifier.py  visualizer.py  visualizer2.py
ml_proctoring/: __init__.py  audio_buffer.py  audio_utils.py  embedder.py  fusion.py  models.py  session.py  speaker_tracker.py  vad_bridge.py
