[project]
name = "claudeaudioproctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy<2.0",
    "scipy==1.13.1",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]
